# django-admin-multi-select-filter

./: LICENSE  README.md  pyproject.toml
src/django_admin_multi_select_filter/: filters.py
